<resources>
    <string name="app_name">Pet&amp;Go</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">2010150639242622</string>
    <string name="fb_login_protocol_scheme">fb2010150639242622</string>
    <string name="signing_in_label">Signing in</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="trips_refresh_label">No trips found, swipe down to refresh</string>
    <string name="title_activity_main2">ActivityMain2</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pet_tacker_image_description">Pet tacker image</string>
    <string name="user_image_view_content">User image</string>
    <string name="pet_image_content_description">Pet image</string>
    <string name="address_icon_content_description">Address icon</string>
    <string name="phone_icon_content_description">Phone icon</string>
    <string name="title_trips">Trips</string>
    <string name="title_petgo"><![CDATA[Pet&Go]]></string>
    <string name="title_profile">Profile</string>

    <string name="title_activity_splash_screen">ActivitySplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>
    <string name="date_icon_content_description">date icon</string>
    <string name="time_icon_content_description">time icon</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="hour_format">hh:mm</string>
    <string name="save_string">Save</string>
    <string name="cancel_string">Cancel</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="phones">Phones</string>
    <string name="address">Address</string>
    <string name="pets">Pets</string>
    <string name="phone_icon_description">phone icon</string>

    <string-array name="sizes">
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
    </string-array>
</resources>
